--- a/index.html
+++ b/index.html
@@ -22,17 +22,11 @@
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-12 col-md-4'>
-          <h2>Machine Learning Neural Network</h2>
-          <p>
-            This is a machine learning crypto currency trader. It turns important information that includes tracking the ema and cost into binarary numbers ranging from -1 to 1 indicating whether the neurons are on or off. It stores all of this information in an array which is used to train the network. To train the network use the following commands...
-            b - buy
-            s - sell
-            start - starts the start program
-            stop - stops the program
-            save - saves trained data to JSON
-            p - place order
-            a - ask order
-          </p>
+          <h2>Socket Trader</h2>
+          <p>start: starts socket bot</p>
+          <p>speed: conservative/aggressive</p>
+          <p>engage: true/false</p>
+          <p>manual sell: clears purchase memory</p>
           <ul id="messages"></ul>
         </div>
         <div class='col-12 col-md-8'>
