cleaning up repo, changing git.ignore, update readme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-12 col-md-4'>
-          <h2>Socket Trader</h2>
+          <h2>Socket Bot</h2>
           <p>start: starts socket bot</p>
           <p>speed: conservative/aggressive</p>
           <p>engage: true/false</p>
