--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
           <ul id="messages"></ul>
         </div>
         <div class='col-12 col-md-8'>
-          <div id="closeDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
-          <div id="BNBUSDTEMA"><!-- Plotly chart will be drawn inside this DIV --></div>
-          <div id="PercentageChart"><!-- Plotly chart will be drawn inside this DIV --></div>
-          <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
           <div id="charts"></div>
         </div>
       </div>
@@ -48,62 +44,12 @@
         <div class='col-12'>
           <form action="">
             <input id="m" placeholder="commands go here!"autocomplete="off" /><button>Send</button>
-          </form>        </div>
+          </form>        
+        </div>
       </div>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script>
-      let data = [];
-      $(function () {
-        var socket = io();
-        $('form').submit(function(){
-          socket.emit('botLog', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
-        socket.on('botLog', function(msg, neuralTrainingData){
-          $('#messages').append($('<li>').text(msg));
-          if ($("#messages li").length >= 10) {
-            $("#messages li:first").remove();
-          }
-          //console.log(neuralTrainingData);
-          //window.scrollTo(0, document.body.scrollHeight);
-        });
-        socket.on('chart', function(closeData, chartName){
-          let ran = false;
-          const chartLayout = { 
-            title: chartName,
-            aspectmode: 'cube'
-          };
-          if (ran !== true) {
-            console.log(closeData, chartName);
-            let div = document.createElement('div');
-            div.setAttribute("id", chartName);
-            document.getElementById("charts").appendChild(div);
-            ran = true;
-          }
-          Plotly.newPlot(chartName, closeData, chartLayout);
-          //window.scrollTo(0, document.body.scrollHeight);
-        });
-        // socket.on('PercentageChart', function(percentageData, chartName){
-        //   let ran = false;
-        //   const chartLayout = {
-        //     title:'PercentageChart Data',
-        //     aspectmode: 'cube'
-        //   };
-        //   if (ran !== true) {
-        //     console.log(percentageData, chartName);
-        //     let div = document.createElement('div');
-        //     div.setAttribute("id", chartName);
-        //     document.getElementById("charts").appendChild(div);
-        //     ran = true;
-        //   }
-        //   Plotly.newPlot(chartName, percentageData, chartLayout);
-        //   //window.scrollTo(0, document.body.scrollHeight);
-        // });
-      });
-
-    </script>
+    <script src="/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
