--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
         <div class='col-12 col-md-8'>
           <div id="charts"></div>
+          <div id="rsiChart"></div>
         </div>
       </div>
     </div>
