--- a/version2/index.html
+++ b/version2/index.html
@@ -15,13 +15,21 @@
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-12'>
+          <header>
+            <p>Gross:&nbsp;<span id="gross"></span></p>
+            <p>Fees:&nbsp;<span id="fees"></span></p>
+            <p>Net:&nbsp;<span id="net"></span></p>
+          </header>
           <div id="chartContainer" style="height: 400px; width: 100%;"></div>
+          <div id="trixChart" style="height: 400px; width: 100%;"></div>
+
           <div id="kstChart" style="height: 400px; width: 100%"></div>
           <div id="chartContainerTwo" style="height: 400px; width: 100%"></div>
           <div id="adxChartContainer" style="height: 400px; width: 100%;"></div>
 
           <div id="chartContainerThree" style="height: 400px; width: 100%;"></div>
           <div id="obvChart" style="height: 400px; width: 100%;"></div>
+
         </div>
       </div>
       <div class='row'>
