--- a/version2/index.html
+++ b/version2/index.html
@@ -16,8 +16,9 @@
       <div class='row'>
         <div class='col-12'>
           <header>
+            <p>Estimated PNL: 1ETH taking only longs, if you short its more! </p>
             <p>Gross:&nbsp;<span id="gross"></span></p>
-            <p>Fees:&nbsp;<span id="fees"></span></p>
+            <p>0.075% Fees:&nbsp;<span id="fees"></span></p>
             <p>Net:&nbsp;<span id="net"></span></p>
           </header>
           <div id="chartContainer" style="height: 400px; width: 100%;"></div>
