--- a/version4/index.html
+++ b/version4/index.html
@@ -31,6 +31,7 @@
           </header>
           <div id="secondChartContainer" style="height: 400px; width: 100%;"></div>
           <div id="secondTrixChart" style="height: 400px; width: 100%;"></div>
+          <div id="streamChartContainer" style="height: 400px; width: 100%;"></div>
           <div id="asdf" style="height: 400px; width: 100%;"></div>
 
 
