working on strategy

--- a/version4/index.html
+++ b/version4/index.html
@@ -26,6 +26,7 @@
               <div id="mainChartContainer" class="chart" ></div>
               <!-- <div id="mainTrixChart" style="height: 400px; width: 100%;"></div> -->
               <div id="mainMACDChart" class="chart" ></div>
+              <!-- <div id="mainTrixChart" class="chart" ></div> -->
             </div>
             <div class="buttons">
               <button id="btn-backtest" class="btnStart"><span>Start Backtest</span></button>
